--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
