--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/socket.io-client": "^1.4.36",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "sass": "^1.93.1",
     "tailwindcss": "^4",
     "typescript": "^5"
