--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kafoor-frontend",
+  "author": "Mikhailov Kirill <akcjdjs123456789@gmail.com>",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,14 +19,14 @@
     "framer-motion": "^12.23.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
-    "socket.io-client": "^2.4.0",
+    "socket.io-client": "^4.8.3",
     "use-debounce": "^10.0.6",
     "use-timer": "^2.0.1",
     "uuid": "^13.0.0",
